# aspire-terminal

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  aspire_terminal_output.txt  compile_commands.json  main.cpp  nano.12688.save  nano.7671.save
.cache/clangd/index/: EscapeSequence.cpp.AA427448EC1FB85D.idx  EscapeSequence.h.92F413E00FC27064.idx  Pty.cpp.F2F86972590F9DDC.idx  Pty.h.8DEB4F56BBB2FDA1.idx  TerminalCharacter.cpp.4CE9FC46EA747C97.idx  TerminalCharacter.h.2BBD910D86E9C1A3.idx  TerminalWidget.cpp.F7E1AEEBEBCC5F4A.idx  TerminalWidget.h.FE00E9249CA9CEB2.idx  TextBuffer.cpp.F6DAEC463C7D564A.idx  TextBuffer.h.97C69572727A5D24.idx  main.cpp.5855269C82040867.idx
src/: CompletionItem.cpp  CompletionItem.h  CompletionModel.cpp  CompletionModel.h  CompletionTree.cpp  CompletionTree.h  Compression.cpp  Compression.h  EscapeSequence.cpp  EscapeSequence.h  Pty.cpp  Pty.h  ShellCompleter.cpp  ShellCompleter.h  ShellCompletionItem.cpp  ShellCompletionItem.h  ShellCompletionModel.cpp  ShellCompletionModel.h  ShellItemView.cpp  ShellItemView.h  TerminalCharacter.cpp  TerminalCharacter.h  TerminalColor.h  TerminalWidget.cpp  TerminalWidget.h  TextBuffer.cpp  TextBuffer.h
